--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "http-auth": "~1.2.7",
     "mongodb": "1.3.19",
     "mongojs": "~0.9.7",
-    "express3-handlebars": "^0.5.0"
+    "express3-handlebars": "^0.5.0",
+    "coffee-script": "^1.7.1"
   },
   "license": "Copyright (c) 2014 SolarCity",
   "engines": {
